# fastray

./: LICENSE  README.md  config.py  fsray.sql  main.py  pyproject.toml  requirements.txt
app/api/: api.py
app/api/endpoints/: access.py  area.py  machine.py  record.py  role.py  user.py
app/api/views/: index.py
app/core/: auth.py  event.py  exception.py  log_midderware.py  router.py  task.py
app/database/: mysql.py  redis.py
app/models/: models.py
app/schemas/: area.py  machine.py  record.py  response.py  role.py  type.py  user.py
app/service/: AccessService.py  AreaService.py  BaseService.py  MachineService.py  RecordService.py  RoleAccessService.py  RoleService.py  UserRoleService.py  UserService.py
app/utils/: crypto_utils.py  map_utils.py  sms_utils.py
resources/static/css/: style.css
resources/templates/: index.html
