[project]
name = "fastray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "celery>=5.4.0",
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "shapely>=2.0.7",
    "sqlmodel>=0.0.24",
    "tortoise-orm>=0.24.2",
    "uvicorn>=0.34.0",
]
